--- a/package.json
+++ b/package.json
@@ -17,6 +17,7 @@
     "devDependencies": {
         "clean-webpack-plugin": "^3.0.0",
         "css-loader": "^5.0.2",
+        "getusermedia": "^2.0.1",
         "html-inline-script-webpack-plugin": "^3.1.0",
         "html-webpack-plugin": "^5.2.0",
         "style-loader": "^2.0.0",
